Harrison/visit/visit.css
/* ... */
@media (max-width: 767px) {
    .hero-banner {
        padding: 60px;
    }

    .hero-overlay-box {
        margin-top: 50px;
        max-width: 420px;
        padding: 22px;
    }

    .hero-button {
        margin-top: 24px;
        padding: 16px;
        font-size: 12pt;
        justify-self: center;
    }

    .hero-slogan {
        font-size: 12pt;
    }

    .hero-title {
        font-size: 22pt;
    }

    .hero-paragraph {
        font-size: 10pt;
    }
}

@media (max-width: 576px) {
    .hero-banner {
        padding: 50px;
    }

    .hero-overlay-box {
        max-height: 550px;
        padding: 16px;
    }

    .hero-slogan {
        font-size: 11pt;
    }

    .hero-title {
        font-size: 14.4pt;
        margin-bottom: 10px;
    }

    .hero-paragraph {
        font-size: 10pt;
        max-height: 400px;
    }

    .hero-button {
        padding: 10px;
        font-size: 10pt;
        justify-self: center;
        margin-left: 0px;
    }

    .hero-caption {
        bottom: 10px;
        right: 10px;
        font-size: 9px;
        padding: 3px 8px;
    }
}

/* Blurb css */
.intro-section {
    margin-bottom: 0.5rem;
    margin-top: 1rem;
    padding: 1rem;
}

.intro-section p {
    color: #000000;
    max-width: 650px;
    margin-left: auto;
    margin-right: auto;
}

.intro-divider {
    width: 60px;
    border: 2px solid var(--accent-color);
    margin: 1.5rem auto;
    opacity: 1;
}

